--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Omnifood</title>
   </head>
@@ -23,6 +30,37 @@
             >Start Eating Well</a
           >
           <a href="#" class="btn btn--outline">Learn more &darr;</a>
+          <div class="delivered-meals">
+            <div class="delivered-imgs">
+              <img
+                src="public/img/customers/customer-1.jpg"
+                alt="customer-img"
+              />
+              <img
+                src="public/img/customers/customer-2.jpg"
+                alt="customer-img"
+              />
+              <img
+                src="public/img/customers/customer-3.jpg"
+                alt="customer-img"
+              />
+              <img
+                src="public/img/customers/customer-4.jpg"
+                alt="customer-img"
+              />
+              <img
+                src="public/img/customers/customer-5.jpg"
+                alt="customer-img"
+              />
+              <img
+                src="public/img/customers/customer-6.jpg"
+                alt="customer-img"
+              />
+            </div>
+            <p class="delivered-text">
+              <span>250,000+</span> meals delivered last year!
+            </p>
+          </div>
         </div>
         <div class="hero-img-box">
           <img src="public/img/hero.png" class="hero-img" alt="image" />
