added featurd in component

--- a/index.html
+++ b/index.html
@@ -85,8 +85,25 @@
         </div>
       </section>
 
-      <section class="section-how">
+      <!-- Feature -->
+
+      <section class="section-feature">
         <div class="container">
+          <h2 class="heading-featured-in">As featured in</h2>
+          <div class="logos">
+            <img src="public/img//logos/techcrunch.png" />
+            <img src="public/img//logos/forbes.png" />
+            <img src="public/img//logos/business-insider.png" />
+            <img src="public/img//logos/the-new-york-times.png" />
+            <img src="public/img//logos/usa-today.png" />
+          </div>
+        </div>
+      </section>
+
+      <!-- How it works -->
+
+      <section class="section-how">
+        <div class="container howitwork-container">
           <span class="sub-heading">How it works</span>
           <h2 class="heading-secondary">
             Your daily dose of health in 3 simple steps
