added Meal 3 section

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             Omnifood AI chooses from 5,000+ recipes
           </h2>
         </div>
-        <div class="container grid grid grid--3-cols">
+        <div class="container grid grid--3-cols margin-bottom-md">
           <div class="meal">
             <img src="public/img/meals/meal-1.jpg" class="meal-img" />
             <div class="meal-content">
@@ -199,7 +199,7 @@
                 </li>
                 <li class="meal-attribute">
                   <ion-icon class="meal-icon" name="star-outline"></ion-icon
-                  ><span> <strong>4.9</strong> Average rating</span>
+                  ><span> <strong>4.9</strong> rating(537)</span>
                 </li>
               </ul>
             </div>
@@ -227,14 +227,52 @@
                 </li>
                 <li class="meal-attribute">
                   <ion-icon class="meal-icon" name="star-outline"></ion-icon
-                  ><span> <strong>4.8</strong> Average rating</span>
+                  ><span> <strong>4.8</strong> rating (441)</span>
                 </li>
               </ul>
             </div>
           </div>
 
-          <div class="meal">Meals</div>
-          <div class="list">List of Diets</div>
+          <div class="diets">
+            <h3 class="heading-tertiary">Works with any diet:</h3>
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Vegetarian</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Vegan</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Pescatarian</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Gluten-free</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Lactose-free</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Keto Paleo</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Low FODMAP</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Kid-friendly</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="container all-recipes margin-bottom-md">
+          <a href="#" class="link">See all recipes &rarr;</a>
         </div>
       </section>
     </main>
